--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
         "start": "node server.js "
     },
@@ -10,10 +10,10 @@
     "author": "Long",
     "license": "ISC",
     "dependencies": {
+        "express": "^4.17.2",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^15.0.0",
-        "express": "^4.17.2",
         "express-async-handler": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.8",
